@@ -1,5 +1,6 @@
 Changes in 3.2.1 :
 - Resort torrents if display name is changed
+- Fix bug causing torrents to get stuck when data checking and move to completed dir are done when a torrent has finished
 
 Changes in 3.2 :
 - Use QDir to create directories, avoids nested event loops, which seems to be buggy in some situations (182327)
